[package]
name = "patch-json"
version = "0.1.0"
authors = ["Julius Michaelis <gitter@liftm.de>"]
edition = "2018"
description = "Tool for generating and applying RFC 6902 JSON patches"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
repository = "https://github.com/jcaesar/patch-json"

[dependencies]
json-patch = "0.2"
serde_json = { version = "1", features = ["preserve_order"] }

[profile.release]
lto = "fat"
strip = "debuginfo"
